# TinyRenderer

./: CMakeLists.txt  Math.hpp  Model.cpp  Model.h  RenderPipe.h  TinyRender.cpp  TinyRender.sln  TinyRender.vcxproj  TinyRender.vcxproj.filters  main.cpp  output.tga  pch.h
source/renderer/: Math.hpp  Model.cpp  Model.h  RenderPipe.h  Vec.cpp  Vec.h  main.cpp  output.tga  pch.h
x64/Debug/: TinyRender.exe.recipe  TinyRender.ilk  TinyRender.vcxproj.FileListAbsolute.txt  vc142.idb
x64/Debug/TinyRender.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TinyRender.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
